[package]
name = "duro_console"
version = "0.1.0"
edition = "2021"
authors = ["Ardura <azviscarra@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/ardura"
description = "A console with saturation focus"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
arrayref = "0.3.7"
atomic_float = "0.1"
crossbeam = "0.8.2"
dwt = "0.5.2"
hound = "3.5.0"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.

# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
#nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs", "standalone"] }


nih_plug = { path = "../nih-plug-master", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { path = "../nih-plug-master/nih_plug_vizia" }
rustfft = "6.1.0"
win_dbg_logger = "0.1.0"


[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
opt-level = 2
debug = true
strip = "none"
